<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SudoQ</string>
    <string name="menu_settings">Difficulty</string>
    <string name="main_continue">Continue</string>
    <string name="main_new">New Game</string>
    <string name="main_about">About</string>
    <string name="main_continue_description">Continues a game started before</string>
    <string name="title_activity_about">About</string>
    <string name="about_title">Made by:</string>
    <string name="about_content">Przemysław Burczyk</string>
    <string name="about_button">Home page</string>
    <string name="title_activity_sudoq">Sudoq</string>
    <string name="main_difficulty_easy">Easy</string>
    <string name="main_difficulty_medium">Medium</string>
    <string name="main_difficulty_hard">Hard</string>

</resources>